--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en"> 
-<head>       
+<head>        
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/stylesheets/main.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 	<title> Day 14 - Layout 2</title>
 </head>
 <body>
@@ -63,7 +64,7 @@
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. </p>
 				</div>
-				<button class="btn about__btn"><a href="">Apply</a></button>
+				<button class="btn about__btn"><a href="#">Apply</a></button>
 			</div>
 		</div>
 		<div class="contact black section">
@@ -80,7 +81,7 @@
 		</div>
 		<div class="map section">
 			<div class="wrapper cf">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13504.714156683247!2d76.36039842543143!3d32.19941944840162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391b522c7cd8b85b%3A0x9d68653444d4c03a!2sRakkar%2C+Himachal+Pradesh!5e0!3m2!1sen!2sin!4v1539944624338" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13504.714156683247!2d76.36039842543143!3d32.19941944840162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391b522c7cd8b85b%3A0x9d68653444d4c03a!2sRakkar%2C+Himachal+Pradesh!5e0!3m2!1sen!2sin!4v1539944624338" width="90%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</div>
 		</div>
 		<div class="table black section">
