--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="en"> 
-<head>        
+<head>       
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="assets/stylesheets/main.css">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 	<title>Clone-AltCampus</title>
+	<!-- Custom CSS File -->
+
+	<link rel="stylesheet" href="assets/stylesheets/main.css">
+
+	<!-- Font awesome CSS link -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+
+	<!-- Google fonts - Source sans pro -->
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+
 </head>
 <body>
+
+		<!-- Header -->
+
 	<header>
+
 		<div class="wrapper cf">
 			<div class="logo">
 				<h2><a href="">altcampus</a></h2>
@@ -21,14 +32,17 @@
 			</label>
 			<nav class="header__nav">
 				<ul>
-					<li><a href="">portfolio</a></li>
-					<li><a href="">about</a></li>
-					<li><a href="">contact</a></li>
+					<li><a href="#portfolio">portfolio</a></li>
+					<li><a href="#about">about</a></li>
+					<li><a href="#contact">contact</a></li>
 				</ul>
 			</nav>
 		</div>
 	</header>
 	<main>
+
+		<!-- Hero section  -->
+
 		<div class="hero section">
 			<div class="wrapper">
 				<img class="hero__img" src="assets/media/logo.png">
@@ -36,7 +50,10 @@
 				<p class="hero__text">web designer - graphic artist - user experience designer</p>
 			</div>
 		</div>
-		<div class="portfolio black section">
+
+		<!-- Portfolio section -->
+
+		<div id="portfolio" class="portfolio black section">
 			<div class="wrapper cf">
 				<h2>portfolio</h2>
 				<img class="col-1-3" src="assets/media/portfolio/cabin.png">
@@ -47,7 +64,10 @@
 				<img class="col-1-3" src="assets/media/portfolio/submarine.png">
 			</div>
 		</div>
-		<div class="about section">
+
+		<!-- About section -->
+
+		<div id = "about" class="about section">
 			<div class="wrapper cf">
 				<h2>about</h2>
 				<div class="col-1-2">
@@ -67,7 +87,10 @@
 				<button class="btn about__btn"><a href="#">Apply</a></button>
 			</div>
 		</div>
-		<div class="contact black section">
+
+		<!-- Contact section -->
+
+		<div id="contact" class="contact black section">
 			<div class="wrapper cf">
 				<h2>contact me</h2>
 				<form class="contact-form col-2-3">
@@ -79,11 +102,17 @@
 				</form>
 			</div>
 		</div>
+
+		<!--  Google map section -->
+
 		<div class="map section">
 			<div class="wrapper cf">
 				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13504.714156683247!2d76.36039842543143!3d32.19941944840162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391b522c7cd8b85b%3A0x9d68653444d4c03a!2sRakkar%2C+Himachal+Pradesh!5e0!3m2!1sen!2sin!4v1539944624338" width="90%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</div>
 		</div>
+
+		<!--  Table section -->
+
 		<div class="table black section">
 			<div class="wrapper cf">
 				<h2>table</h2>
@@ -137,6 +166,9 @@
 				</table>
 			</div>
 		</div>
+
+		<!-- Footer 1 section -->
+
 		<div class="last-section section">
 			<div class="wrapper cf">
 				<div class="col-1-3">
@@ -168,6 +200,9 @@
 			</div>
 		</div>
 	</main>
+
+	<!-- Footer section -->
+
 	<footer>
 		<p>copyright &copy; your website 2018</p>
 	</footer>
