cross button in nav mobile

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			<input class="head-check" type="checkbox" id="toggle">
 			<label for="toggle">
 				<i class="ham-icon fas fa-bars"></i>
+				<i class="cross-icon fas fa-times"></i>
 			</label>
 			<nav class="header__nav">
 				<ul>
