--- a/index.html
+++ b/index.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
-<html lang="en"> 
-<head>       
+<html lang="en">
+
+<head>  
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Clone-AltCampus</title>
 	<!-- Custom CSS File -->
-
 	<link rel="stylesheet" href="assets/stylesheets/main.css">
-
 	<!-- Font awesome CSS link -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-
 	<!-- Google fonts - Source sans pro -->
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-
 </head>
+
 <body>
-
-		<!-- Header -->
-
+	<!-- Header -->
 	<header>
-
 		<div class="wrapper cf">
 			<div class="logo">
-				<h2><a href="">altcampus</a></h2>
+				<h2><a href="">AltCampus</a></h2>
 			</div>
 			<input class="head-check" type="checkbox" id="toggle">
 			<label for="toggle">
@@ -33,17 +28,15 @@
 			</label>
 			<nav class="header__nav">
 				<ul>
-					<li><a href="#portfolio">portfolio</a></li>
-					<li><a href="#about">about</a></li>
-					<li><a href="#contact">contact</a></li>
+					<a href="#portfolio"><li>portfolio</li></a>
+					<a href="#about"><li>about</li></a>
+					<a href="#contact"><li>contact</li></a>
 				</ul>
 			</nav>
 		</div>
 	</header>
 	<main>
-
 		<!-- Hero section  -->
-
 		<div class="hero section">
 			<div class="wrapper">
 				<img class="hero__img" src="assets/media/logo.png">
@@ -51,9 +44,7 @@
 				<p class="hero__text">web designer - graphic artist - user experience designer</p>
 			</div>
 		</div>
-
 		<!-- Portfolio section -->
-
 		<div id="portfolio" class="portfolio black section">
 			<div class="wrapper cf">
 				<h2>portfolio</h2>
@@ -65,32 +56,32 @@
 				<img class="col-1-3" src="assets/media/portfolio/submarine.png">
 			</div>
 		</div>
-
 		<!-- About section -->
-
-		<div id = "about" class="about section">
+		<div id="about" class="about section">
 			<div class="wrapper cf">
 				<h2>about</h2>
 				<div class="col-1-2">
-					<p class="about__text about__text1 col-2-3" >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					<p class="about__text about__text1 col-2-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. </p>
 				</div>
 				<div class="col-1-2">
-					<p class="about__text col-2-3" >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					<p class="about__text col-2-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. </p>
 				</div>
-				<button class="btn about__btn"><a href="#">Apply</a></button>
+				<button class="btn about__btn relative">
+					<a href="#">Apply</a>
+					<div class="btn-circles btn-circle1"></div>
+					<div class="btn-circles btn-circle2"></div>
+				</button>
 			</div>
 		</div>
-
 		<!-- Contact section -->
-
 		<div id="contact" class="contact black section">
 			<div class="wrapper cf">
 				<h2>contact me</h2>
@@ -98,22 +89,18 @@
 					<input class="form__item" type="text" name="username" placeholder="Name">
 					<input class="form__item" type="email" name="useremail" placeholder="Email Address">
 					<input class="form__item" type="phone" name="userphone" placeholder="Phone Number">
-					<textarea class="form__item" placeholder="Message" ></textarea>
+					<textarea class="form__item" placeholder="Message"></textarea>
 					<button class="btn form__btn">Send</button>
 				</form>
 			</div>
 		</div>
-
 		<!--  Google map section -->
-
 		<div class="map section">
 			<div class="wrapper cf">
 				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13504.714156683247!2d76.36039842543143!3d32.19941944840162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391b522c7cd8b85b%3A0x9d68653444d4c03a!2sRakkar%2C+Himachal+Pradesh!5e0!3m2!1sen!2sin!4v1539944624338" width="90%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</div>
 		</div>
-
 		<!--  Table section -->
-
 		<div class="table black section">
 			<div class="wrapper cf">
 				<h2>table</h2>
@@ -167,9 +154,7 @@
 				</table>
 			</div>
 		</div>
-
 		<!-- Footer 1 section -->
-
 		<div class="last-section section">
 			<div class="wrapper cf">
 				<div class="col-1-3">
@@ -200,12 +185,18 @@
 				</div>
 			</div>
 		</div>
+		<!-- Move up btn  -->
+		<div class="move-up-btn relative"><a href="#">
+			<i class="fas fa-sort-up center"></i></a>
+		</div>
+
 	</main>
-
 	<!-- Footer section -->
-
 	<footer>
 		<p>copyright &copy; your website 2018</p>
 	</footer>
+
+
 </body>
+
 </html>
