--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<header>
 		<div class="wrapper cf">
 			<div class="logo">
-				<h2><a href="">AltCampus</a></h2>
+				<h2><a href="#">AltCampus</a></h2>
 			</div>
 			<input class="head-check" type="checkbox" id="toggle">
 			<label for="toggle">
@@ -163,28 +163,29 @@
 				</div>
 				<div class="col-1-3">
 					<h3>around the web</h3>
-					<a href=""><div class="icon-circle relative">
+					<a href="#"><div class="icon-circle relative">
 						<i class="icon center fab fa-facebook-f"></i>
 					</div></a>
-					<a href=""><div class="icon-circle relative">
+					<a href="#"><div class="icon-circle relative">
 						<i class="icon  center fab fa-twitter"></i>
 					</div></a>
-					<a href=""><div class="icon-circle relative">
+					<a href="#"><div class="icon-circle relative">
 						<i class="icon  center fab fa-google-plus-g"></i>
 					</div></a>
-					<a href=""><div class="icon-circle relative">
+					<a href="#"><div class="icon-circle relative">
 						<i class="icon center fab fa-linkedin-in"></i>
 					</div></a>
-					<a href=""><div class="icon-circle relative">
+					<a href="#"><div class="icon-circle relative">
 						<i class="icon center fab fa-dribbble"></i>
 					</div></a>
 				</div>
 				<div class="col-1-3">
 					<h3>about altcampus</h3>
-					<p class="last-section__text">A 6-months program that helps you become a software developer by <a href="">AltCampus</a></p>
+					<p class="last-section__text">A 6-months program that helps you become a software developer by <a href="#">AltCampus</a></p>
 				</div>
 			</div>
 		</div>
+		
 		<!-- Move up btn  -->
 		<div class="move-up-btn relative"><a href="#">
 			<i class="fas fa-sort-up center"></i></a>
